styling: fix breadcrumb spacing

--- a/src/app/components/Breadcrumb.module.scss
+++ b/src/app/components/Breadcrumb.module.scss
@@ -28,7 +28,8 @@
 
 .breadcrumbItem::after {
     content: '/';
-    margin-left: 8px;
+    margin-left: 4px;
+    margin-right: 4px;
 }
 
 .breadcrumbItem:last-child a {
